--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "grunt-uncss": "^0.3.3",
     "grunt-contrib-cssmin": "^0.9.0",
     "grunt-contrib-compress": "^0.8.0",
-    "grunt-contrib-uglify": "^0.4.0"
+    "grunt-contrib-uglify": "^0.4.0",
+    "grunt-cli": "^0.1.13"
   }
 }
