--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "grunt": "^0.4.4",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-copy": "^0.5.0",
-    "grunt-processhtml": "^0.3.3",
-    "grunt-uncss": "^0.3.3",
     "grunt-contrib-cssmin": "^0.9.0",
-    "grunt-contrib-concat": "^0.4.0"
-    "grunt-contrib-compress": "^0.8.0",
+    "grunt-contrib-concat": "^0.4.0",
+    "grunt-processhtml": "^0.3.3",
+    "grunt-contrib-compress": "^0.8.0"
   }
 }
